--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                             <i class="fa fa-expand fa-3x"></i>
                         </div>
                     </div>
-                    <img src="img/gallery/1.jpg" class="img-responsive" alt="">
+                    <img src="img/gallery/1-preview.jpg" class="img-responsive" alt="Photo Galerie 1">
                 </a>
                 <div class="gallery-caption">
                     <h4>Titre Image 1</h4>
@@ -240,7 +240,7 @@
                             <i class="fa fa-expand fa-3x"></i>
                         </div>
                     </div>
-                    <img src="img/gallery/2.jpg" class="img-responsive" alt="">
+                    <img src="img/gallery/2-preview.jpg" class="img-responsive" alt="Photo Galerie 2">
                 </a>
                 <div class="gallery-caption">
                     <h4>Titre Image 2</h4>
@@ -254,7 +254,7 @@
                             <i class="fa fa-expand fa-3x"></i>
                         </div>
                     </div>
-                    <img src="img/gallery/3.jpg" class="img-responsive" alt="">
+                    <img src="img/gallery/3-preview.jpg" class="img-responsive" alt="Photo Galerie 3">
                 </a>
                 <div class="gallery-caption">
                     <h4>Titre Image 3</h4>
@@ -270,7 +270,7 @@
                             <i class="fa fa-expand fa-3x"></i>
                         </div>
                     </div>
-                    <img src="img/gallery/4.jpg" class="img-responsive" alt="">
+                    <img src="img/gallery/4-preview.jpg" class="img-responsive" alt="Photo Galerie 4">
                 </a>
                 <div class="gallery-caption">
                     <h4>Titre Image 4</h4>
@@ -284,7 +284,7 @@
                             <i class="fa fa-expand fa-3x"></i>
                         </div>
                     </div>
-                    <img src="img/gallery/5.jpg" class="img-responsive" alt="">
+                    <img src="img/gallery/5-preview.jpg" class="img-responsive" alt="Photo Galerie 5">
                 </a>
                 <div class="gallery-caption">
                     <h4>Titre Image 5</h4>
@@ -311,6 +311,7 @@
 
 <!-- Contact Section -->
 <section id="contact">
+    <div class="overlay">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -355,6 +356,7 @@
                 </form>
             </div>
         </div>
+    </div>
     </div>
 </section>
 
@@ -538,36 +540,8 @@
     </div>
 </div>
 
-<!-- Portfolio Modal 6 -->
-<div class="gallery-modal modal fade" id="galleryModal6" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="modal-body">
-                            <!-- Project Details Go Here -->
-                            <h2>Lorem ipsum dolor</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/gallery/6.jpg" alt="">
-                            <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
-                                <i class="fa fa-times"></i>
-                                Fermer
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 
+<div id="viewport-spy"></div>
 <!-- jQuery -->
 <script src="vendor/jquery/jquery.min.js"></script>
 
@@ -578,11 +552,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
 <!-- Contact Form JavaScript -->
-<script src="js/jqBootstrapValidation.js"></script>
-<script src="js/contact_me.js"></script>
+<script src="js/jqBootstrapValidation.js?v1"></script>
+<script src="js/contact_me.js?v1"></script>
 
 <!-- Theme JavaScript -->
-<script src="js/agency.min.js"></script>
+<script src="js/agency.js?v1"></script>
 
 </body>
 
