#3 (improving styling of player)

--- a/index.html
+++ b/index.html
@@ -189,8 +189,12 @@
                     <ul id="playlist">
                         <li class="audio-track audio-track-even active">
                             <a href="https://1268182399.rsc.cdn77.org/media/audio/01-approche_approche.mp3">
-                                <i class="fa fa-play" aria-hidden="true"></i>
-                                <span>Approche, Approche</span>
+                                <span>
+                                    <i class="fa fa-play" aria-hidden="true"></i>
+                                </span>
+                                <span>
+                                    <span class="audio-track-name">Approche, Approche</span>
+                                </span>
                             </a>
                         </li>
                         <li class="audio-track audio-track-odd ">
