--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="player">
+            <div class="player col-md-8 col-md-offset-2">
                 <div class="audio-wrapper">
                     <audio id="audio" tabindex="0" preload="auto" controls="controls">
                         <source type="audio/mp3"
