--- a/index.html
+++ b/index.html
@@ -106,6 +106,13 @@
 
 <!-- Team Section -->
 <section id="team" class="bg-light-gray">
+    <div class="curtain">
+        <span class="curtain-slice"></span>
+        <span class="curtain-slice"></span>
+        <span class="curtain-slice"></span>
+        <span class="curtain-slice"></span>
+        <span class="curtain-slice"></span>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
