--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 </header>
 
 <!-- Team Section -->
-<section id="team" class="bg-light-gray">
+<section id="team" class="bg-light-gray curtain-slice">
     <div class="curtain">
         <span class="curtain-slice"></span>
         <span class="curtain-slice"></span>
@@ -168,13 +168,13 @@
 <!-- Music Section -->
 <section id="music">
     <div class="container">
-        <div class="row">
+        <div class="row music-header">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Titre section musique</h2>
                 <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
             </div>
         </div>
-        <div class="row">
+        <div class="row music-content">
             <div class="player col-md-8 col-md-offset-2">
                 <div class="audio-wrapper">
                     <audio id="audio" tabindex="0" preload="auto" controls="controls">
@@ -415,9 +415,9 @@
                 </div>
             </div>
             <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="modal-body">
+                <div class="row row-no-pd">
+                    <div class="col-lg-12 col-no-pd">
+                        <div class="modal-body modal-body-no-pd">
                             <!-- Project Details Go Here -->
                             <h2>Lorem ipsum dolor</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
@@ -445,9 +445,9 @@
                 </div>
             </div>
             <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="modal-body">
+                <div class="row row-no-pd">
+                    <div class="col-lg-12 col-no-pd">
+                        <div class="modal-body modal-body-no-pd">
                             <h2>Lorem ipsum dolor</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                             <img class="img-responsive img-centered" src="img/gallery/2.jpg" alt="">
@@ -474,9 +474,9 @@
                 </div>
             </div>
             <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="modal-body">
+                <div class="row row-no-pd">
+                    <div class="col-lg-12 col-no-pd">
+                        <div class="modal-body modal-body-no-pd">
                             <!-- Project Details Go Here -->
                             <h2>Lorem ipsum dolor</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
@@ -504,9 +504,9 @@
                 </div>
             </div>
             <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="modal-body">
+                <div class="row row-no-pd">
+                    <div class="col-lg-12 col-no-pd">
+                        <div class="modal-body modal-body-no-pd">
                             <!-- Project Details Go Here -->
                             <h2>Lorem ipsum dolor</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
@@ -534,9 +534,9 @@
                 </div>
             </div>
             <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="modal-body">
+                <div class="row row-no-pd">
+                    <div class="col-lg-12 col-no-pd">
+                        <div class="modal-body modal-body-no-pd">
                             <!-- Project Details Go Here -->
                             <h2>Lorem ipsum dolor</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
