--- a/index.html
+++ b/index.html
@@ -421,9 +421,21 @@
                     <div class="col-lg-12 col-no-pd">
                         <div class="modal-body modal-body-no-pd">
                             <!-- Project Details Go Here -->
+                            <div class="img-wrapper">
+                                <img class="img-responsive img-centered" src="img/gallery/1.jpg" alt="">
+                                <div class="slide-control prev-slide">
+                                    <a href="#galleryModal5" class="gallery-link" data-toggle="modal">
+                                        <i class="fa fa-caret-left fa-4x"></i>
+                                    </a>
+                                </div>
+                                <div class="slide-control next-slide">
+                                    <a href="#galleryModal2" class="gallery-link" data-toggle="modal">
+                                        <i class="fa fa-caret-right fa-4x"></i>
+                                    </a>
+                                </div>
+                            </div>
                             <h2>Lorem ipsum dolor</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/gallery/1.jpg" alt="">
                             <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
                                 <i class="fa fa-times"></i>
                                 Fermer
@@ -450,9 +462,9 @@
                 <div class="row row-no-pd">
                     <div class="col-lg-12 col-no-pd">
                         <div class="modal-body modal-body-no-pd">
+                            <img class="img-responsive img-centered" src="img/gallery/2.jpg" alt="">
                             <h2>Lorem ipsum dolor</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/gallery/2.jpg" alt="">
                             <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
                                 <i class="fa fa-times"></i>
                                 Fermer
@@ -480,9 +492,9 @@
                     <div class="col-lg-12 col-no-pd">
                         <div class="modal-body modal-body-no-pd">
                             <!-- Project Details Go Here -->
+                            <img class="img-responsive img-centered" src="img/gallery/3.jpg" alt="">
                             <h2>Lorem ipsum dolor</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/gallery/3.jpg" alt="">
                             <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
                                 <i class="fa fa-times"></i>
                                 Fermer
@@ -510,9 +522,9 @@
                     <div class="col-lg-12 col-no-pd">
                         <div class="modal-body modal-body-no-pd">
                             <!-- Project Details Go Here -->
+                            <img class="img-responsive img-centered" src="img/gallery/4.jpg" alt="">
                             <h2>Lorem ipsum dolor</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/gallery/4.jpg" alt="">
                             <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
                                 <i class="fa fa-times"></i>
                                 Fermer
@@ -540,9 +552,9 @@
                     <div class="col-lg-12 col-no-pd">
                         <div class="modal-body modal-body-no-pd">
                             <!-- Project Details Go Here -->
+                            <img class="img-responsive img-centered" src="img/gallery/5.jpg" alt="">
                             <h2>Lorem ipsum dolor</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/gallery/5.jpg" alt="">
                             <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
                                 <i class="fa fa-times"></i>
                                 Fermer
@@ -554,63 +566,6 @@
         </div>
     </div>
 </div>
-
-<!--<div class="carousel-item gallery-modal modal fade" id="galleryModal6" tabindex="-1" role="dialog" aria-hidden="true">
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-        </ol>
-
-        <div class="carousel-inner" role="listbox">
-            <div class="item active">
-                <div class="container-fluid">
-                    <div class="row row-no-pd">
-                        <div class="col-lg-12 col-no-pd">
-                            <div class="modal-body modal-body-no-pd">
-                                <h2>img1</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/gallery/5.jpg" alt="">
-                                <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
-                                    <i class="fa fa-times"></i>
-                                    Fermer
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="container-fluid">
-                    <div class="row row-no-pd">
-                        <div class="col-lg-12 col-no-pd">
-                            <div class="modal-body modal-body-no-pd">
-                                <h2>img2</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-responsive img-centered" src="img/gallery/5.jpg" alt="">
-                                <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
-                                    <i class="fa fa-times"></i>
-                                    Fermer
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            ...
-        </div>
-
-        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-</div>-->
 
 <div id="viewport-spy"></div>
 <!-- jQuery -->
