--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Vignal en chanson</a>
+            <!--<a class="navbar-brand page-scroll" href="#page-top">Vignal en chanson</a>-->
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -62,16 +62,16 @@
                     <a class="page-scroll" href="#header">Accueil</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#team">A propos</a>
+                    <a class="page-scroll" href="#team">Scène</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#music">Musique</a>
+                    <a class="page-scroll" href="#music">Extraits</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#gallery">Photos</a>
+                    <a class="page-scroll" href="#gallery">Scolaire</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
+                    <a class="page-scroll" href="#contact">Contacts</a>
                 </li>
             </ul>
         </div>
@@ -87,15 +87,26 @@
             <div class="row">
                 <div class="col-sm-8">
                     <div class="intro-text">
-                        <div class="intro-lead-in">Bienvenue sur</div>
-                        <div class="intro-heading">Vignal en chanson</div>
+                        <div class="intro-lead-in">Bernard Vignal</div>
+                        <!--<div class="intro-heading">Vignal en chanson</div>-->
                     </div>
                 </div>
                 <div class="col-sm-4"></div>
             </div>
+            <!--            <div class="row">-->
+            <!--                <div class="col-sm-12">-->
             <div class="intro-next">
                 <div class="intro-song">
-                    <p>Il fallait bien qu’un jour je me décide à les vivre en scène...</p>
+                    <p>
+                        <span class="fa fa-quote-left"></span>
+                        Approche, approche écoute bien
+                    </p>
+                    <p>C'est la musique qui vient de loin</p>
+                    <p>Elle plane, elle flotte, elle nous traverse</p>
+                    <p>
+                        Elle vit, elle plisse elle nous caresse
+                        <span class="fa fa-quote-right"></span>
+                    </p>
                 </div>
                 <a href="#team" class="page-scroll">
                         <span class="fa-stack">
@@ -104,65 +115,66 @@
                     </span>
                 </a>
             </div>
+            <!--                </div>-->
+            <!--            </div>-->
         </div>
     </div>
 </header>
 
 <!-- Team Section -->
-<section id="team" class="bg-light-gray curtain-slice">
-    <div class="curtain">
-        <span class="curtain-slice"></span>
-        <span class="curtain-slice"></span>
-        <span class="curtain-slice"></span>
-        <span class="curtain-slice"></span>
-        <span class="curtain-slice"></span>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Titre section le groupe</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="team-member">
-                    <img src="img/team/p1-final.jpg" class="img-responsive img-circle" alt="Bernard Vignal">
-                    <h4>Bernard Vignal</h4>
-                    <p class="text-muted">Voilà !c’est chose faite.<br/> Avec des chansons pour de rire, des chansons
-                        pour bouger,<br/> Certaines pour réfléchir et d’autres pour rêver<br/> Je vous invite au
-                        plaisir, au plaisir de chanter.</p>
-                    <!--<ul class="list-inline social-buttons">
-                    <li><a href="#"><i class="fa fa-twitter"></i></a>
-                    </li>
-                    <li><a href="#"><i class="fa fa-facebook"></i></a>
-                    </li>
-                    <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                    </li>
-                </ul>-->
+<section id="team" class="bg-light-gray">
+    <div class="hero">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="team-member">
+                        <img src="img/team/p1-final.jpg" class="img-responsive img-circle" alt="Bernard Vignal">
+                        <h4>Bernard <span class="text-uppercase">Vignal</span></h4>
+                        <p class="text-muted">Auteur compositeur</p>
+                        <p class="text-muted">Voix, Guitare</p>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="team-member">
+                        <img src="img/team/p2-final.jpg" class="img-responsive img-circle" alt="Member 2">
+                        <h4>Emmanuel <span class="text-uppercase">Megier</span></h4>
+                        <p class="text-muted">Guitare, Cajon</p>
+                        <p class="text-muted">Percussions légères</p>
+                    </div>
                 </div>
             </div>
-            <div class="col-sm-6">
-                <div class="team-member">
-                    <img src="img/team/p2-final.jpg" class="img-responsive img-circle" alt="Member 2">
-                    <h4>Member 2</h4>
-                    <p class="text-muted">Lipsum lipsum</p>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="team-member">
+                        <img src="img/team/p3-final.jpg" class="img-responsive img-circle" alt="Member 3">
+                        <h4>Cécile <span class="text-uppercase">Chabert</span></h4>
+                        <p class="text-muted">Voix, Percussions légères</p>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="team-member">
+                        <img src="img/team/p4-final.jpg" class="img-responsive img-circle" alt="Member 4">
+                        <h4>Muriel <span class="text-uppercase">Roger</span></h4>
+                        <p class="text-muted">Voix, Percussions légères</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="team-member">
-                    <img src="img/team/p3-final.jpg" class="img-responsive img-circle" alt="Member 3">
-                    <h4>Member 3</h4>
-                    <p class="text-muted">Lipsum lipsum</p>
-                </div>
+            <div class="team-member-bubble team-member-outerLeft">
+                <i class="fa fa-commenting"></i>
             </div>
-            <div class="col-sm-6">
-                <div class="team-member">
-                    <img src="img/team/p4-final.jpg" class="img-responsive img-circle" alt="Member 4">
-                    <h4>Member 4</h4>
-                    <p class="text-muted">Lipsum lipsum</p>
+            <div class="team-member-bubble team-member-innerLeft">
+                <i class="fa fa-commenting"></i>
+            </div>
+            <div class="team-member-bubble team-member-innerRight">
+                <i class="fa fa-commenting"></i>
+            </div>
+            <div class="team-member-bubble team-member-outerRight">
+                <i class="fa fa-commenting"></i>
+            </div>
+            <div class="row overlay-white team-catchphrase">
+                <div class="col-lg-12 text-left">
+                    <h2 class="section-heading">Tour de chant tout public</h2>
+                    <!--<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
                 </div>
             </div>
         </div>
@@ -178,54 +190,92 @@
                 <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
             </div>
         </div>
-        <div class="row music-content">
-            <div class="player col-md-8 col-md-offset-2">
-                <div class="audio-wrapper">
-                    <audio id="audio" tabindex="0" preload="auto" controls="controls">
-                        <source type="audio/mp3"
-                                src="https://1268182399.rsc.cdn77.org/media/audio/01-approche_approche.mp3"/>
-                        <div class="audio-no-html5">
-                            <p>Désolé, votre navigateur ne permet pas de jouer notre musique. Veuillez télécharger l'un
-                                des navigateurs ci-dessous :</p>
-                            <ul>
-                                <li><a href="https://www.google.fr/chrome">Google Chrome</a></li>
-                                <li><a href="https://www.mozilla.org/fr/firefox/new/">Firefox</a></li>
-                                <li><a href="http://www.opera.com/fr">Opera</a></li>
-                            </ul>
-                        </div>
-                    </audio>
-                </div>
-                <div class="audio-list-wrapper">
-                    <div class="playlist-controls"></div>
-                    <ul id="playlist">
-                        <li class="audio-track audio-track-even active">
-                            <a href="https://1268182399.rsc.cdn77.org/media/audio/01-approche_approche.mp3">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="container-fluid">
+                    <div class="row music-content">
+                        <div class="player col-md-8 col-md-offset-2">
+                            <div class="audio-wrapper">
+                                <audio id="audio" tabindex="0" preload="auto" controls="controls">
+                                    <source type="audio/mp3"
+                                            src="https://1268182399.rsc.cdn77.org/media/audio/01-approche_approche.mp3"/>
+                                    <div class="audio-no-html5">
+                                        <p>Désolé, votre navigateur ne permet pas de jouer notre musique. Veuillez
+                                            télécharger l'un
+                                            des navigateurs ci-dessous :</p>
+                                        <ul>
+                                            <li><a href="https://www.google.fr/chrome">Google Chrome</a></li>
+                                            <li><a href="https://www.mozilla.org/fr/firefox/new/">Firefox</a></li>
+                                            <li><a href="http://www.opera.com/fr">Opera</a></li>
+                                        </ul>
+                                    </div>
+                                </audio>
+                            </div>
+                            <div class="audio-list-wrapper">
+                                <div class="playlist-controls"></div>
+                                <ul id="playlist">
+                                    <li class="audio-track audio-track-even active">
+                                        <a href="https://1268182399.rsc.cdn77.org/media/audio/01-approche_approche.mp3">
                                 <span>
                                     <i class="fa fa-play" aria-hidden="true"></i>
                                 </span>
-                                <span>
+                                            <span>
                                     <span class="audio-track-name">Approche, Approche</span>
                                 </span>
-                            </a>
-                        </li>
-                        <li class="audio-track audio-track-odd ">
-                            <a href="https://1268182399.rsc.cdn77.org/media/audio/03-un_beau_tresor.mp3">
-                                <i class="fa fa-play" aria-hidden="true"></i>
-                                <span>Un beau trésor</span>
-                            </a>
-                        </li>
-                        <li class="audio-track audio-track-even ">
-                            <a href="https://1268182399.rsc.cdn77.org/media/audio/02-le_blues_du_cycliste.mp3">
-                                <i class="fa fa-play" aria-hidden="true"></i>
-                                <span>Le blues du cycliste</span>
-                            </a>
-                        </li>
-                    </ul>
+                                        </a>
+                                    </li>
+                                    <li class="audio-track audio-track-odd ">
+                                        <a href="https://1268182399.rsc.cdn77.org/media/audio/03-un_beau_tresor.mp3">
+                                            <i class="fa fa-play" aria-hidden="true"></i>
+                                            <span>Un beau trésor</span>
+                                        </a>
+                                    </li>
+                                    <li class="audio-track audio-track-even ">
+                                        <a href="https://1268182399.rsc.cdn77.org/media/audio/02-le_blues_du_cycliste.mp3">
+                                            <i class="fa fa-play" aria-hidden="true"></i>
+                                            <span>Le blues du cycliste</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 hide-from-768w">
+                <div class="col-md-4 col-sm-6 gallery-item">
+                    <a href="#galleryModal1" class="gallery-link" data-toggle="modal">
+                        <div class="gallery-hover">
+                            <div class="gallery-hover-content">
+                                <i class="fa fa-expand fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/gallery/1-preview.jpg" class="img-responsive" alt="Photo Galerie 1">
+                    </a>
+                    <div class="gallery-caption">
+                        <h4>Titre Image 1</h4>
+                        <p class="text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 gallery-item">
+                    <a href="#galleryModal4" class="gallery-link" data-toggle="modal">
+                        <div class="gallery-hover">
+                            <div class="gallery-hover-content">
+                                <i class="fa fa-expand fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/gallery/4-preview.jpg" class="img-responsive" alt="Photo Galerie 4">
+                    </a>
+                    <div class="gallery-caption">
+                        <h4>Titre Image 4</h4>
+                        <p class="text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
 <!-- Portfolio Grid Section -->
 <section id="gallery" class="bg-light-gray">
     <div class="container">
