--- a/index.html
+++ b/index.html
@@ -93,30 +93,30 @@
                 </div>
                 <div class="col-sm-4"></div>
             </div>
-            <!--            <div class="row">-->
-            <!--                <div class="col-sm-12">-->
-            <div class="intro-next">
-                <div class="intro-song">
-                    <p>
-                        <span class="fa fa-quote-left"></span>
-                        Approche, approche écoute bien
-                    </p>
-                    <p>C'est la musique qui vient de loin</p>
-                    <p>Elle plane, elle flotte, elle nous traverse</p>
-                    <p>
-                        Elle vit, elle plisse elle nous caresse
-                        <span class="fa fa-quote-right"></span>
-                    </p>
-                </div>
-                <a href="#team" class="page-scroll">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="intro-next">
+                        <div class="intro-song">
+                            <p>
+                                <span class="fa fa-quote-left"></span>
+                                Approche, approche écoute bien
+                            </p>
+                            <p>C'est la musique qui vient de loin</p>
+                            <p>Elle plane, elle flotte, elle nous traverse</p>
+                            <p>
+                                Elle vit, elle plisse elle nous caresse
+                                <span class="fa fa-quote-right"></span>
+                            </p>
+                        </div>
+                        <a href="#team" class="page-scroll">
                         <span class="fa-stack">
                         <i class="fa fa-circle fa-stack-2x"></i>
                         <i class="fa fa-angle-down fa-stack-1x" style="color: #000;"></i>
                     </span>
-                </a>
+                        </a>
+                    </div>
+                </div>
             </div>
-            <!--                </div>-->
-            <!--            </div>-->
         </div>
     </div>
 </header>
