--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <img src="img/team/p1-final.jpg" class="img-responsive img-circle" alt="Bernard Vignal">
                         <h4>Bernard <span class="text-uppercase">Vignal</span></h4>
                         <p class="text-muted">Auteur compositeur</p>
-                        <p class="text-muted">Voix, Guitare</p>
+                        <p class="text-muted">Voix lead, Guitare</p>
                     </div>
                 </div>
                 <div class="col-sm-6">
