#24 (header section: rearranging, team section: dual design)

--- a/index.html
+++ b/index.html
@@ -93,38 +93,60 @@
                 </div>
                 <div class="col-sm-4"></div>
             </div>
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="intro-next">
-                        <div class="intro-song">
-                            <p>
-                                <span class="fa fa-quote-left"></span>
-                                Approche, approche écoute bien
-                            </p>
-                            <p>C'est la musique qui vient de loin</p>
-                            <p>Elle plane, elle flotte, elle nous traverse</p>
-                            <p>
-                                Elle vit, elle plisse elle nous caresse
-                                <span class="fa fa-quote-right"></span>
-                            </p>
-                        </div>
-                        <a href="#team" class="page-scroll">
-                        <span class="fa-stack">
-                        <i class="fa fa-circle fa-stack-2x"></i>
-                        <i class="fa fa-angle-down fa-stack-1x" style="color: #000;"></i>
-                    </span>
+        </div>
+        <div class="container">
+            <div class="intro-next">
+                <div class="intro-song">
+                    <p>
+                        <span class="fa fa-quote-left"></span>
+                        Approche, approche écoute bien
+                    </p>
+                    <p>C'est la musique qui vient de loin</p>
+                    <p>Elle plane, elle flotte, elle nous traverse</p>
+                    <p>
+                        Elle vit, elle plisse elle nous caresse
+                        <span class="fa fa-quote-right"></span>
+                    </p>
+                </div>
+                <a href="#team" class="page-scroll next-button">
+                    <i class="fa fa-angle-down fa-4x text-center" style="color: #333;"></i>
+                </a>
+            </div>
+        </div>
+
+    </div>
+</header>
+
+<!-- Team Section -->
+<section id="team" class="bg-light-gray">
+    <div id="team-member-bubbles">
+        <div class="hero">
+            <div class="team-member-bubble team-member-outerLeft">
+                <i class="fa fa-commenting"></i>
+            </div>
+            <div class="team-member-bubble team-member-innerLeft">
+                <i class="fa fa-commenting"></i>
+            </div>
+            <div class="team-member-bubble team-member-innerRight">
+                <i class="fa fa-commenting"></i>
+            </div>
+            <div class="team-member-bubble team-member-outerRight">
+                <i class="fa fa-commenting"></i>
+            </div>
+            <div class="container">
+                <div class="row overlay-white team-catchphrase">
+                    <div class="col-lg-12 text-left">
+                        <h2 class="section-heading">Tour de chant tout public</h2>
+                        <a href="#music" class="page-scroll next-button">
+                            <i class="fa fa-angle-down text-center" style="color: #333;"></i>
                         </a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</header>
-
-<!-- Team Section -->
-<section id="team" class="bg-light-gray">
-    <div class="hero">
-        <div class="container">
+    <div id="team-medals">
+        <div class="container team-medals">
             <div class="row">
                 <div class="col-sm-6">
                     <div class="team-member">
@@ -157,24 +179,6 @@
                         <h4>Muriel <span class="text-uppercase">Roger</span></h4>
                         <p class="text-muted">Voix, Percussions légères</p>
                     </div>
-                </div>
-            </div>
-            <div class="team-member-bubble team-member-outerLeft">
-                <i class="fa fa-commenting"></i>
-            </div>
-            <div class="team-member-bubble team-member-innerLeft">
-                <i class="fa fa-commenting"></i>
-            </div>
-            <div class="team-member-bubble team-member-innerRight">
-                <i class="fa fa-commenting"></i>
-            </div>
-            <div class="team-member-bubble team-member-outerRight">
-                <i class="fa fa-commenting"></i>
-            </div>
-            <div class="row overlay-white team-catchphrase">
-                <div class="col-lg-12 text-left">
-                    <h2 class="section-heading">Tour de chant tout public</h2>
-                    <!--<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
                 </div>
             </div>
         </div>
