--- a/index.html
+++ b/index.html
@@ -185,6 +185,38 @@
     </div>
 </section>
 
+<!-- Bernard profile -->
+<div class="team-member-modal modal fade" id="teamMemberModal1" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid">
+                <div class="row row-no-pd">
+                    <div class="col-lg-12 col-no-pd">
+                        <div class="modal-body modal-body-no-pd">
+                            <div class="team-member">
+                                <img src="img/team/p1-final.jpg" class="img-responsive img-circle" alt="Bernard Vignal">
+                                <h4>Bernard <span class="text-uppercase">Vignal</span></h4>
+                                <p class="text-muted">Auteur compositeur</p>
+                                <p class="text-muted">Voix lead, Guitare</p>
+                            </div>
+                            <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
+                                <i class="fa fa-times"></i>
+                                Fermer
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Music Section -->
 <section id="music">
     <div class="container">
