--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
                 <div class="col-sm-8">
                     <div class="intro-text">
                         <div class="intro-lead-in">Bernard Vignal</div>
-                        <!--<div class="intro-heading">Vignal en chanson</div>-->
                     </div>
                 </div>
                 <div class="col-sm-4"></div>
@@ -109,7 +108,7 @@
                     </p>
                 </div>
                 <a href="#team" class="page-scroll next-button">
-                    <i class="fa fa-angle-down fa-4x text-center" style="color: #333;"></i>
+                    <i class="fa fa-angle-down fa-4x text-center"></i>
                 </a>
             </div>
         </div>
