--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <div class="col-lg-12 text-left">
                         <h2 class="section-heading">Tour de chant tout public</h2>
                         <a href="#music" class="page-scroll next-button">
-                            <i class="fa fa-angle-down text-center" style="color: #333;"></i>
+                            <i class="fa fa-angle-down text-center"></i>
                         </a>
                     </div>
                 </div>
@@ -146,6 +146,11 @@
     </div>
     <div id="team-medals">
         <div class="container team-medals">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Tour de chant tout public</h2>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-sm-6">
                     <div class="team-member">
