#24 et #26 (section team)

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Theme CSS -->
-    <link href="css/agency.css?v4" rel="stylesheet">
+    <link href="css/agency.css?v5" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -164,16 +164,14 @@
                     <div class="team-member">
                         <img src="img/team/p1-final.jpg" class="img-responsive img-circle" alt="Bernard Vignal">
                         <h4>Bernard <span class="text-uppercase">Vignal</span></h4>
-                        <p class="text-muted">Auteur compositeur</p>
-                        <p class="text-muted">Voix lead, Guitare</p>
+                        <p class="text-muted">Auteur compositeur, Voix lead, Guitare</p>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="team-member">
                         <img src="img/team/p2-final.jpg" class="img-responsive img-circle" alt="Member 2">
                         <h4>Emmanuel <span class="text-uppercase">Megier</span></h4>
-                        <p class="text-muted">Guitare, Cajon</p>
-                        <p class="text-muted">Percussions légères</p>
+                        <p class="text-muted">Guitare, Cajon, Percussions légères</p>
                     </div>
                 </div>
             </div>
@@ -203,7 +201,7 @@
         <div class="modal-content team-member-modal-content">
             <div class="container-fluid">
                 <div class="row row-no-pd">
-                    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-no-pd">
+                    <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-no-pd">
                         <div class="modal-body modal-body-no-pd team-member-modal-body">
                             <div class="team-member">
                                 <img src="img/team/p4-final.jpg" class="img-responsive img-circle" alt="Member 4">
@@ -226,7 +224,7 @@
         <div class="modal-content team-member-modal-content">
             <div class="container-fluid">
                 <div class="row row-no-pd">
-                    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-no-pd">
+                    <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-no-pd">
                         <div class="modal-body modal-body-no-pd team-member-modal-body">
                             <div class="team-member">
                                 <img src="img/team/p3-final.jpg" class="img-responsive img-circle" alt="Member 3">
@@ -249,7 +247,7 @@
         <div class="modal-content team-member-modal-content">
             <div class="container-fluid">
                 <div class="row row-no-pd">
-                    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-no-pd">
+                    <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-no-pd">
                         <div class="modal-body modal-body-no-pd team-member-modal-body">
                             <div class="team-member">
                                 <img src="img/team/p1-final.jpg" class="img-responsive img-circle" alt="Bernard Vignal">
@@ -272,7 +270,7 @@
         <div class="modal-content team-member-modal-content">
             <div class="container-fluid">
                 <div class="row row-no-pd">
-                    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-no-pd">
+                    <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-no-pd">
                         <div class="modal-body modal-body-no-pd team-member-modal-body">
                             <div class="team-member">
                                 <img src="img/team/p2-final.jpg" class="img-responsive img-circle" alt="Member 2">
@@ -801,11 +799,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
 <!-- Contact Form JavaScript -->
-<script src="js/jqBootstrapValidation.js?v4"></script>
-<script src="js/contact_me.js?v4"></script>
+<script src="js/jqBootstrapValidation.js?v5"></script>
+<script src="js/contact_me.js?v5"></script>
 
 <!-- Theme JavaScript -->
-<script src="js/agency.js?v4"></script>
+<script src="js/agency.js?v5"></script>
 
 </body>
 
